2004-9-25   Andrew Lunn <andrew.lunn@ascom.ch>

	* doc/redboot_install.sgml: Added installation information for the
	Atmel AT91 JTST board provided by Andrea Michelotti
	
2004-9-23   Bob Koninckx <bob.koninckx@o-3s.com>

	* src/net/tc.c: Removed unneccesary call to MS_TICKS_DELAY

2004-09-19  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl: Add CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE
	* src/net/net_io.c (net_init): Initialize only one network
	device if CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE defined.

2004-09-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/load.c (do_load): Removed compiler warning when building
	reboot without networking.

2004-09-05  Mark Salter  <msalter@redhat.com>

	* doc/redboot_installing.sgml: Add mb93091 and mb93093.

2004-09-02  Mark Salter  <msalter@redhat.com>

	* doc/redboot_cmds.sgml: Add -x option to exec command.

2004-09-01  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl (CYGOPT_REDBOOT_FLASH_BYTEORDER): New option.
	* include/redboot.h: Define FLASH_{READ,PROGRAM} macros.
	Define REDBOOT_FLASH_REVERSE_BYTEORDER if appropriate.
	* src/flash.c: Add support for CYGOPT_REDBOOT_FLASH_BYTEORDER.
	Use FLASH_{READ,PROGRAM} macros instead of flash driver api.
	* src/fconfig.c: Ditto.

	* src/main.c (do_version): Update copyright message.

2004-08-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (fis_init): Avoid potentially unnecessary erase
	attempt at end of flash.

2004-08-27  Peter Korsgaard <jacmet@sunsite.dk>  

	* doc/redboot_cmds.sgml: Fixed a minor typo with fis list

2004-08-17  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl:
        * src/net/net_io.c: added CDL to allow the default server to
        be configured. Also respect the CYGSEM_REDBOOT_DEFAULT_NO_BOOTP
        setting.

2004-08-16  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl:
        * src/load.c: Added cdl to control the size of the buffer used